# PC-Chatbot-Builder

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: chat.py
backend/app/db/: __init__.py  models.py  parts.py  sessions.py
backend/app/graph/: __init__.py  graph.py  nodes.py  state.py
backend/app/tools/: __init__.py  build.py  parts.py
backend/scripts/: refresh_parts.py
data/: parts_seed.json
frontend/: vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BuildCard.tsx  ChatInput.tsx  MessageList.tsx  SessionList.tsx
src/pc_builder/: __init__.py  config.py  curate.py  llm.py  models.py  price_lookup.py
